@@ -1,6 +1,8 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
 	- backport inotify code to C89.
+        - implement EV_WIN32_HANDLE_TO_FD and EV_WIN32_CLOSE_FD configuration
+          symbols to make ti easier for apps to do their own fd management.
 
 3.8  Sun Aug  9 14:30:45 CEST 2009
 	- incompatible change: do not necessarily reset signal handler
